# the-doctor

./: .env.example  .env.test  .gitignore  AGENTS.md  HANDBOOK.md  main.py  processor.py  pyproject.toml  start-all-test.sh  start-all.sh  start-perplexity-api.sh  telegram_listener.py
.opencode/: openwork.json
.opencode/agents/: openwork.md
.wwebjs_cache/: 2.3000.1040677438.html
dashboard/: app.py
launchd/: com.thedoctor.start-all.plist  install.sh
scripts/: test_pipeline.sh
whatsapp/: .env.example  .gitignore  listener.mjs  package-lock.json  package.json
whatsapp/.wwebjs_cache/: 2.3000.1040570780.html
